Heading: Fix anchor link icon alignment

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -1760,7 +1760,6 @@ a:hover {
     .headerlink::before {
       display: flex;
       align-items: flex-start;
-      height: 100%;
     }
   }
 
